# llm-game-theory-agents

./: .gitignore  README.md  pyproject.toml
scripts/: run_comm_experiment.py
src/llmgt/agents/: __init__.py  simple.py
src/llmgt/experiments/: __init__.py  plotting.py  sweep.py
src/llmgt/games/: __init__.py  base.py  battle_of_sexes.py  prisoners_dilemma.py  stag_hunt.py  ultimatum.py
src/llmgt/logging/: __init__.py  jsonl_logger.py  records.py
src/llmgt/sim/: agreement.py  rounds.py  runner.py  utils.py
tests/: test_agreement.py  test_experiment_sweep.py  test_games.py  test_logging_record.py  test_plotting.py  test_prisoners_dilemma.py  test_rounds_to_agreement.py  test_sim_runner.py
